fix: corrige altura e overflow

--- a/src/styles/partials/carroussel.scss
+++ b/src/styles/partials/carroussel.scss
@@ -47,7 +47,7 @@
 
         .card {
             // max-width: 279px;
-            height: 424px;
+            // height: 424px;
             display: flex;
             border: none;
             border-radius: 8px;
@@ -60,12 +60,12 @@
 
             @media (min-width: 2501px) {
                 width: 100%;
-                height: 768px;
+                // height: 768px;
             }
 
             @media (min-width: 2700px) {
                 width: 100%;
-                height: 768px;
+                // height: 768px;
             }
 
             @media (min-width: 1441px) and (max-width: 2499px) {
@@ -76,7 +76,7 @@
             @media (max-width: $tablets) {
                 width: 100%;
                 max-width: none;
-                height: 710px;
+                // height: 710px;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
@@ -87,7 +87,7 @@
 
             @media (max-width: $phone) {
                 max-width: none;
-                height: 412px;
+                // height: 412px;
                 width: 100%;
             }
 
@@ -187,7 +187,7 @@
                     }
 
                     .text-card {
-                        height: 60px;
+                        height: 40px;
                         margin: 0 24px;
                         margin-top: 24px;
                         font-weight: 700;
@@ -210,13 +210,14 @@
                             }
                         }
 
-                        @media (min-width: 1438px) and (max-width: 1442px) {
-                            overflow-y: auto;
+                        // @media (min-width: 1438px) and (max-width: 1442px) {
+                        overflow-y: auto;
 
-                            &::-webkit-scrollbar {
-                                width: 0;
-                            }
+                        &::-webkit-scrollbar {
+                            width: 0;
                         }
+
+                        // }
 
                         @media (min-width: 1023px) and (max-width: 1025px) {
                             overflow-y: auto;
@@ -231,6 +232,7 @@
                             margin: 0;
                             padding: 0 24px;
                             padding-top: 24px;
+
                             &::-webkit-scrollbar {
                                 width: 0;
                             }
@@ -238,7 +240,7 @@
 
                         @media (max-width: $tablets) {
                             min-width: 240px;
-                            height: 60px;
+                            height: 40px;
                             overflow-y: auto;
 
                             &::-webkit-scrollbar {
@@ -259,7 +261,7 @@
                     .paragraph-card {
                         font-family: "Roboto", sans-serif;
                         font-weight: 400;
-                        height: 96px;
+                        // height: 96px;
                         min-width: 232px;
                         font-size: 16px;
                         line-height: 24px;
@@ -269,6 +271,13 @@
                         margin: 0 24px;
                         margin-bottom: 24px;
 
+                        // colocar reticencias
+                        display: -webkit-box;
+                        -webkit-line-clamp: 4;
+                        overflow: hidden;
+                        -webkit-box-orient: vertical;
+
+
                         @media (min-width: $full) {
                             width: 100%;
                             min-width: 496px;
@@ -277,65 +286,71 @@
                             line-height: 48px;
                             padding: 0 24px;
                             padding-bottom: 24px;
-                            overflow-y: auto;
-
-                            &::-webkit-scrollbar {
-                                width: 0;
-                            }
+                            display: -webkit-box;
+                            -webkit-line-clamp: 4;
+                            overflow: hidden;
+                            -webkit-box-orient: vertical;
                         }
 
                         @media (min-width: 2501px) {
                             margin: auto;
                         }
 
-                        @media (min-width: 1438px) and (max-width: 1442px) {
-                            overflow-y: auto;
+                        // @media (min-width: 1438px) and (max-width: 1442px) {
+                        //     overflow-y: auto;
 
-                            &::-webkit-scrollbar {
-                                width: 0;
-                            }
-                        }
+                        //     &::-webkit-scrollbar {
+                        //         width: 0;
+                        //     }
+                        // }
 
                         @media (max-width: $tablets) {
                             height: auto;
-                            overflow-y: auto;
-
-                            &::-webkit-scrollbar {
-                                width: 1px;
-                            }
+                            display: -webkit-box;
+                            -webkit-line-clamp: 3;
+                            overflow: hidden;
+                            -webkit-box-orient: vertical;
                         }
 
-                        @media (min-width: 1023px) and (max-width: 1025px) {
-                            overflow-y: auto;
+                        // @media (min-width: 1023px) and (max-width: 1025px) {
+                        //     overflow-y: auto;
 
-                            &::-webkit-scrollbar {
-                                width: 0;
-                            }
-                        }
+                        //     &::-webkit-scrollbar {
+                        //         width: 0;
+                        //     }
+                        // }
 
                         @media (min-width: 1025px) and (max-width: 1439px) {
                             margin: 0 24px;
                             margin-bottom: 24px;
                             overflow-y: auto;
                             min-width: 200px;
+                            display: -webkit-box;
+                            -webkit-line-clamp: 3;
+                            overflow: hidden;
+                            -webkit-box-orient: vertical;
                         }
 
                         @media (max-width: $phone) {
                             height: 72px;
-                            overflow: auto;
                             min-width: auto;
+                            // colocar reticencias
+                            display: -webkit-box;
+                            -webkit-line-clamp: 3;
+                            overflow: hidden;
+                            -webkit-box-orient: vertical;
 
-                            &::-webkit-scrollbar {
-                                width: 1px;
-                            }
+                            // &::-webkit-scrollbar {
+                            //     width: 1px;
+                            // }
 
-                            @media (min-width: 374px) and (max-width: 376px) {
-                                overflow-y: auto;
+                            // @media (min-width: 374px) and (max-width: 376px) {
+                            //     overflow-y: auto;
 
-                                &::-webkit-scrollbar {
-                                    width: 0;
-                                }
-                            }
+                            //     &::-webkit-scrollbar {
+                            //         width: 0;
+                            //     }
+                            // }
                         }
                     }
                 }
